--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -113,7 +113,8 @@
                                                         :min="null" 
                                                         :max="null" 
                                                         :digits="null"
-                                                        :allowEmpty="false">                                                
+                                                        :allowEmpty="false">
+                                                    </sw-number-field>                                        
                                                 {% endblock %}
                                             </div>
 
