--- a/src/Resources/app/storefront/src/scss/_variables.scss
+++ b/src/Resources/app/storefront/src/scss/_variables.scss
@@ -15,3 +15,7 @@ $blur-elysium-slide-control-btn-size:       1.5rem !default;
 $blur-elysium-slide-control-btn-color:      rgba(0,0,0,0.25) !default;
 
 $blur-elysium-slide-nav-color:              rgba(0,0,0,0.25) !default;
+
+$blur-elysium-slide-zindex-overlay:         5;
+$blur-elysium-slide-zindex-url-overlay:     15;
+$blur-elysium-slide-zindex-container:       10;
