--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-settings-form/blur-elysium-slides-settings-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-settings-form/blur-elysium-slides-settings-form.twig
@@ -2,6 +2,7 @@
     <sw-card
         :title="$tc('BlurElysiumSlides.settingsForm.cardTitle')"
         :is-loading="isLoading"
+        v-if="!isLoading && slide.slideSettings"
     >
 
         {% block blur_elysium_slides_input_container_settings %}
