push media to default folder on upload

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-media-form/blur-elysium-slides-media-form.twig
@@ -21,6 +21,7 @@
                     variant="regular"
                     :label="$tc('BlurElysiumSlides.mediaForm.uploadInput.title')"
                     :help-text="$tc('BlurElysiumSlides.mediaForm.uploadInput.helpText')"
+                    :default-folder="entityName"
                     @media-drop="payload => setMedia( payload.id, 'slideCover' )"
                     @media-upload-remove-image="payload => resetMedia( 'slideCover' )"
                     @media-upload-sidebar-open="mediaSidebar.openContent()"
@@ -43,6 +44,7 @@
                     variant="regular"
                     :label="$tc('BlurElysiumSlides.mediaForm.coverPortrait.title')"
                     :help-text="$tc('BlurElysiumSlides.mediaForm.coverPortrait.helpText')"
+                    :default-folder="entityName"
                     @media-drop="payload => setMedia( payload.id, 'slideCoverPortrait' )"
                     @media-upload-remove-image="payload => resetMedia( 'slideCoverPortrait' )"
                     @media-upload-sidebar-open="mediaSidebar.openContent()"
