--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-list/blur-elysium-slides-list.twig
@@ -16,7 +16,7 @@
                 <div class="smart-bar-header__title-container">
 
                     {% block blur_elysium_slides_list_view_smart_bar_header_icon %}
-                        <sw-icon name="default-tools-ruler-pencil" color="#d35400"></sw-icon>
+                        <sw-icon name="default-action-quickjump" color="#e868a1"></sw-icon>
                     {% endblock %}
 
                     {% block blur_elysium_slides_list_view_smart_bar_header_title %}
