--- a/src/Resources/app/storefront/src/scss/_variables.scss
+++ b/src/Resources/app/storefront/src/scss/_variables.scss
@@ -1,7 +1,14 @@
-$blur-elysium-slide-py:             3rem !default;
-$blur-elysium-slide-px:             3rem !default;
-$blur-elysium-slide-mb:             2rem !default;
-$blur-elysium-slide-text-color:     #ffffff !default;
+$blur-elysium-slide-py:                     1rem !default;
+$blur-elysium-slide-px:                     1rem !default;
+
+$blur-elysium-slide-py-md:                  2rem !default;
+$blur-elysium-slide-px-md:                  2rem !default;
+
+$blur-elysium-slide-py-lg:                  3rem !default;
+$blur-elysium-slide-px-lg:                  3rem !default;
+
+$blur-elysium-slide-mb:                     2rem !default;
+$blur-elysium-slide-text-color:             #ffffff !default;
 
 $blur-elysium-slide-horizontal-algnment-breakpoint:             'lg' !default;
 
