--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -15,12 +15,16 @@
     %bes_slide-padding;
     position: relative;
     height: 100%;
+    width: 100%;
     background: {
         position: center center;
         size: cover;
         repeat: no-repeat;
     }
     color: $blur-elysium-slide-text-color;
+
+    aspect-ratio: 1 / 1;
+	max-width: 100%;
 
     @include media-breakpoint-up( xl ) {
         padding: 6rem;
@@ -38,11 +42,7 @@
             background-color: rgba(0,0,0,0.2);
             z-index: $blur-elysium-slide-zindex-overlay;
         }
-    }
-
-    &.image-flow-mode {
-        padding: 0;
-    }    
+    }  
 
     &.content-container__box-mode {
 
@@ -73,9 +73,8 @@
     .align-items-start,
     .justify-content-center;
     flex: 1 1 100%;
-    height: 100%;
+    height: auto;
     max-width: 1000px;
-    position: relative;
     z-index: $blur-elysium-slide-zindex-container;
 }
 
@@ -148,8 +147,8 @@
 }
 
 .cms-element-elysium-slider__navigation-bullet {
-    width: 1rem;
-    height: 1rem;
+    width: .75rem;
+    height: .75rem;
     margin: .25rem;
     border-radius: 10rem;
     background-color: $blur-elysium-slide-nav-color;
@@ -167,22 +166,9 @@
     .justify-content-center;
     position: absolute;
     z-index: 5;
-    bottom: 2rem;
+    bottom: 1rem;
     left: 0;
     width: 100%;
-}
-
-.cms-element-elysium-slide__image-flow-wrapper {
-    @extend .d-flex,
-    .flex-wrap,
-    .align-items-stretch,
-    .justify-content-start,
-    %bes_slide-padding;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
 }
 
 .cms-element-elysium-slide__url-overlay {
@@ -194,26 +180,4 @@
 	bottom: 0;
 	right: 0;
 	text-indent: -100%;
-}
-
-/**
- * Cover Image Styling
-**/
-.cms-element-elysium-slide__cover-image-element {
-	display: block;
-	width: 100%;
-	max-width: 100%;
-	height: auto;
-
-    .cms-element-elysium-slide.image-flow-mode & {
-        // use as fallback if no portrait image is set in image flow mode
-        /**
-         * @TODO check if portrait image is uploaded
-         * if not set this as seperate fallback class (only on imageflow mode)
-         */
-        @media (orientation: portrait) {
-            min-height: 50vh;
-            object-fit: cover;            
-        }
-    }
 }
