--- a/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
@@ -22,14 +22,14 @@
             <style>
 
                 {# default background-image #}
-                {% if slide.media.url and ( slide.media.fileExtension in bgImageExtensionWhitelist ) and imageFlowMode is same as( false ) %}
+                {% if slide.media.url and ( slide.media.fileExtension in bgImageExtensionWhitelist ) %}
                     [data-elysium-slide-id="{{ slide.id }}"] {
                         background-image: url( {{ slide.media.url }} );
                     }
                 {% endif %}
 
                 {# portrait mode background-image #}
-                {% if slide.mediaPortrait.url and ( slide.media.fileExtension in bgImageExtensionWhitelist ) and imageFlowMode is same as( false ) %}
+                {% if slide.mediaPortrait.url and ( slide.media.fileExtension in bgImageExtensionWhitelist ) %}
                     @media only screen and (orientation: portrait) {
                         [data-elysium-slide-id="{{ slide.id }}"] {
                             background-image: url( {{ slide.mediaPortrait.url }} );
@@ -52,7 +52,7 @@
 
     {% block cms_element_blur_elysium_slide %}
         <div data-elysium-slide-id="{{ slide.id }}" 
-            class="cms-element-elysium-slide{% if imageFlowMode %} image-flow-mode{% endif %}{{ containerBoxMode }}{{ containerHorizonalAlignment }}">
+            class="cms-element-elysium-slide{{ containerBoxMode }}{{ containerHorizonalAlignment }}">
 
             {% if slide.slideSettings.urlOverlay is same as( true ) and slide.translated.url %}
                 <a href="{{ slide.translated.url }}" 
@@ -64,29 +64,7 @@
                     {% endif %}>{{ slide.translated.title }}</a>
             {% endif %}
 
-            {# image element for image flow mode #}
-            {% block cms_element_blur_elysium_slide_cover_image_element %}
-                {% if ( slide.media.url or slide.mediaPortrait.url ) and ( slide.media.fileExtension in bgImageExtensionWhitelist ) and imageFlowMode %}
-                    <picture class="{% block blur_elysium_slide_cover_picture_class %}cms-element-elysium-slide__cover-picture{% endblock %}">
-
-                        {% if slide.mediaPortrait %}
-                            <source 
-                                media="(orientation: portrait)" 
-                                srcset="{{ slide.mediaPortrait.url }}">                            
-                        {% endif %}
-
-                        <img src="{{ slide.media.url }}" 
-                            alt="{{ slide.translated.title }}" 
-                            class="{% block blur_elysium_slide_cover_picture_img_class %}cms-element-elysium-slide__cover-image-element{% endblock %}">                    
-                    </picture>
-                {% endif %}
-            {% endblock %}
-
             {% block cms_element_blur_elysium_slide_container %}
-
-                {% if imageFlowMode %}
-                    <div class="cms-element-elysium-slide__image-flow-wrapper">
-                {% endif %}
 
                 <div class="cms-element-elysium-slide__container">
 
@@ -129,10 +107,6 @@
                     {% endblock %}
 
                 </div>
-
-                {% if imageFlowMode %}
-                    </div>
-                {% endif %}
             {% endblock %}
         </div>
     {% endblock %}
