add rel noopener to target blank anchors

--- a/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
+++ b/src/Resources/views/storefront/element/blur-elysium-slide.html.twig
@@ -67,6 +67,7 @@
                     class="btn btn-light cms-element-elysium-slide__cta-button"
                     {% if slide.slideSettings.urlTarget == "external" %}
                         target="_blank"
+                        rel="noopener"
                     {% endif %}>{{ slide.translated.title }}</a>
             {% endif %}
 
@@ -102,6 +103,7 @@
                                         class="{% block blur_elysium_slide_button_class %}btn btn-light cms-element-elysium-slide__cta-button fluid-text-button{% endblock %}"
                                         {% if slide.slideSettings.urlTarget == "external" %}
                                             target="_blank"
+                                            rel="noopener"
                                         {% endif %}
                                         >
                                         
